conexão com o mariadb e migrations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:mariadb://localhost/algalog?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=${MARIADB_USER}
+spring.datasource.password=${MARIADB_PASS}
 
+spring.jpa.show-sql=true
