--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mariadb://localhost/algalog?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.username=${MARIADB_USER}
-spring.datasource.password=${MARIADB_PASS}
+spring.datasource.url=jdbc:mariadb://database:3306/algalog?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=${MARIADB_USER:root}
+spring.datasource.password=${MARIADB_PASS:root}
 
 spring.jpa.show-sql=true
