--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://database:3306/algalog?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mariadb://localhost:3306/algalog?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=${MARIADB_USER:root}
 spring.datasource.password=${MARIADB_PASS:root}
 
