--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=${MARIADB_USER:root}
 spring.datasource.password=${MARIADB_PASS:root}
 
 spring.jpa.show-sql=true
+
+springdoc.swagger-ui.path=/swagger-ui.html
