--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ server:
 spring:
   datasource:
     password: ${MARIADB_PASS:root}
-    url: jdbc:mariadb://localhost:3306/algalog?createDatabaseIfNotExist=true&serverTimezone=UTC
+    url: jdbc:mariadb://algalog_db/algalog?createDatabaseIfNotExist=true&serverTimezone=UTC
     username: ${MARIADB_USER:root}
 
 springdoc:
